# DynamicAttackGraphs

./: .dockerignore  .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md  generate_graphs.sh
docs/: PHASE1_CONCEPTUAL_FRAMEWORK.md  PHASE2_ARCHITECTURE.md  REPRODUCIBILITY.md  RESEARCH_NOTES.md  one_page_summary.tex  presentation.aux  presentation.nav  presentation.tex
docs/assets/: benchmark_results.csv
examples/: explain_goal.rs  graphviz_export.rs  run_benchmarks.rs  simple_demo.rs
examples/scenarios/: alternate_path.facts  firewall_block.facts  local_privilege_escalation.facts  simple_enterprise.facts
paper/: Makefile  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
scripts/: generate_all_artifacts.sh  plot_benchmarks.py
src/: benchmarks.rs  engine.rs  lib.rs  main.rs  metrics.rs  naive.rs  parser.rs  provenance.rs  rules.rs  schema.rs
src/engines/: differential_engine.rs  full_recompute.rs  mod.rs  naive_engine.rs
tests/: attack_graph_rules.rs  engine_correctness.rs  incremental_correctness.rs  local_privilege_escalation.rs  randomized_correctness.rs
website/: app.js  index.html  styles.css
website/assets/: benchmark_results.csv
