[package]
name = "dynamic-attack-graphs"
version = "0.1.0"
edition = "2021"
authors = ["Research Project"]
description = "Dynamic Attack Graphs using Differential Dataflow - Proof of Concept"
repository = ""
license = "MIT"

[dependencies]
# Differential Dataflow - core library for incremental computation
differential-dataflow = "0.12"

# Timely Dataflow - the underlying parallel dataflow engine
timely = "0.12"

# Abomonation - fast serialization (required by timely)
abomonation = "0.7"
abomonation_derive = "0.5"

# For logging and pretty output
env_logger = "0.10"
log = "0.4"

# For configuration
clap = { version = "4.4", features = ["derive"] }

# For randomized testing
rand = "0.8"

[[bin]]
name = "attack-graph"
path = "src/main.rs"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

[profile.release]
opt-level = 3
lto = true
